name:                ordinal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/ordinal#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:
--      Safe
  exposed-modules:
      Text.Numerals.Algorithm
    , Text.Numerals.English
    , Text.Numerals.Prefix
  other-modules:
      Text.Numerals.Internal
  build-depends:
      base >= 4.7 && < 5
    , ordered-containers >= 0.0
    , text >= 0.1
    , vector >= 0.7
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/ordinal
